--- a/apps/events-admin/src/index.css
+++ b/apps/events-admin/src/index.css
@@ -98,6 +98,7 @@
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+  --animate-shimmer: shimmer 2s infinite;
 
   @keyframes accordion-down {
     from {
@@ -113,6 +114,11 @@
     }
     to {
       height: 0;
+    }
+  }
+  @keyframes shimmer {
+    100% {
+      transform: translateX(100%);
     }
   }
 }
